--- a/PrompimanFront/src/app/uistandard/uistandard.page.html
+++ b/PrompimanFront/src/app/uistandard/uistandard.page.html
@@ -84,7 +84,7 @@
     <ng-container *ngSwitchCase="'element'">
 
 
-      <div>
+      <div class="ion-padding">
         <ion-searchbar></ion-searchbar>
       </div>
 
@@ -127,43 +127,42 @@
         </ion-col>
       </ion-row> -->
 
-
       <ion-list lines="none">
-        <ion-item ion-input>
-          <ion-col size="1">
+        <ion-item ion-input lines="none">
+          <ion-col size="2">
             <ion-label> วันที่ </ion-label>
           </ion-col>
           <!-- <mbsc-calendar [(ngModel)]="center" [touchUi]="false" display="center" placeholder="Please select...">Center
           </mbsc-calendar> -->
-          <ion-input item class="ion-text-center" type="date">
+          <ion-input type="date">
           </ion-input>
         </ion-item>
         <ion-item (click)="clock.open()">
-          <ion-col size="1">
+          <ion-col size="2">
             <ion-label> เวลา </ion-label>
           </ion-col>
-          <ion-col>
+          <!-- <ion-col> -->
             <ion-datetime class="ion-text-center" #clock display-format="HH:mm" value="" [(ngModel)]="time"
-              display-timezone="utc">
+              display-timezone="utc" placeholder="กรุณาเลือก">
             </ion-datetime>
-          </ion-col>
+          <!-- </ion-col> -->
           <ion-icon slot="end" name="alarm-outline"> </ion-icon>
         </ion-item>
 
-        <ion-item>
+        <ion-item lines="none">
           <ion-col size="2">
             <ion-label>
               กรอกข้อมูล
             </ion-label>
           </ion-col>
         </ion-item>
-        <ion-item>
+        <ion-item lines="none">
           <ion-col size="2">
             <ion-label>Input</ion-label>
           </ion-col>
           <ion-input type="text" placeholder="กรุณากรอกข้อมูล"></ion-input>
         </ion-item>
-        <ion-item>
+        <ion-item lines="none">
           <ion-col size="2">
             <ion-label>Inputtttttttttttt</ion-label>
           </ion-col>
@@ -240,8 +239,8 @@
       </ion-card>
 
       <ion-card>
-        <ion-card-content class="ion-text-center">
-          <ion-row>
+        <ion-card-content >
+          <ion-item class="ion-text-center">
             <ion-col size="2">
               ไอดี
             </ion-col>
@@ -254,8 +253,9 @@
             <ion-col size="3">
               เบอร์โทรศัพท์
             </ion-col>
-          </ion-row>
-          <ion-row>
+          </ion-item>
+
+          <ion-item class="ion-text-center">
             <ion-col size="2">
               ไอดี
             </ion-col>
@@ -268,8 +268,9 @@
             <ion-col size="3">
               เบอร์โทรศัพท์
             </ion-col>
-          </ion-row>
-          <ion-row>
+          </ion-item>
+
+          <ion-item class="ion-text-center">
             <ion-col size="2">
               ไอดี
             </ion-col>
@@ -282,7 +283,7 @@
             <ion-col size="3">
               เบอร์โทรศัพท์
             </ion-col>
-          </ion-row>
+          </ion-item>
         </ion-card-content>
       </ion-card>
 
