--- a/PrompimanFront/src/app/uistandard/uistandard.page.html
+++ b/PrompimanFront/src/app/uistandard/uistandard.page.html
@@ -127,7 +127,7 @@
         </ion-col>
       </ion-row> -->
 
-      <ion-list lines="none">
+
         <ion-item ion-input lines="none">
           <ion-col size="2">
             <ion-label> วันที่ </ion-label>
@@ -137,38 +137,29 @@
           <ion-input type="date">
           </ion-input>
         </ion-item>
-        <ion-item (click)="clock.open()">
+        <ion-item (click)="clock.open()" lines="none">
           <ion-col size="2">
             <ion-label> เวลา </ion-label>
           </ion-col>
-          <!-- <ion-col> -->
-            <ion-datetime class="ion-text-center" #clock display-format="HH:mm" value="" [(ngModel)]="time"
-              display-timezone="utc" placeholder="กรุณาเลือก">
-            </ion-datetime>
-          <!-- </ion-col> -->
+          <ion-datetime #clock display-format="HH:mm" value="" [(ngModel)]="time" display-timezone="utc"
+            placeholder="กรุณาเลือก">
+          </ion-datetime>
           <ion-icon slot="end" name="alarm-outline"> </ion-icon>
         </ion-item>
 
         <ion-item lines="none">
           <ion-col size="2">
-            <ion-label>
-              กรอกข้อมูล
-            </ion-label>
-          </ion-col>
-        </ion-item>
-        <ion-item lines="none">
-          <ion-col size="2">
-            <ion-label>Input</ion-label>
+            <ion-label>รหัสบัตรประจำตัวประชาชน</ion-label>
           </ion-col>
           <ion-input type="text" placeholder="กรุณากรอกข้อมูล"></ion-input>
         </ion-item>
         <ion-item lines="none">
           <ion-col size="2">
-            <ion-label>Inputtttttttttttt</ion-label>
+            <ion-label>First & Middle Name</ion-label>
           </ion-col>
           <ion-input type="text" placeholder="กรุณากรอกข้อมูล"></ion-input>
         </ion-item>
-        <ion-item>
+        <ion-item lines="none">
           <ion-col size="2">
             <ion-label>เลือกชั้น</ion-label>
           </ion-col>
@@ -179,13 +170,73 @@
             <ion-select-option value="4">4</ion-select-option>
           </ion-select>
         </ion-item>
-      </ion-list>
+
+
+
+        <ion-row>
+          <ion-col size="6">
+            <ion-item lines="none">
+              <ion-col size="4">
+                <ion-label>จำนวนห้อง</ion-label>
+              </ion-col>
+              <ion-input type="text" placeholder="กรุณากรอกข้อมูล"></ion-input>
+            </ion-item>
+          </ion-col>
+
+          <ion-col size="6">
+            <ion-item lines="none">
+              <ion-col size="4">
+                <ion-label>เงินสำรองจ่าย (บาท)</ion-label>
+              </ion-col>
+              <ion-input type="text" placeholder="กรุณากรอกข้อมูล"></ion-input>
+            </ion-item>
+          </ion-col>
+        </ion-row>
+
+        <ion-row>
+          <ion-col size="6">
+            <ion-item lines="none">
+              <ion-col size="4">
+                <ion-label>จำนวนห้อง</ion-label>
+              </ion-col>
+              <ion-input type="text" placeholder="กรุณากรอกข้อมูล"></ion-input>
+            </ion-item>
+          </ion-col>
+
+          <ion-col size="6">
+            <ion-item lines="none">
+              <ion-col size="4">
+                <ion-label>เงินสำรองจ่าย (บาท)</ion-label>
+              </ion-col>
+              <ion-input type="text" placeholder="กรุณากรอกข้อมูล"></ion-input>
+            </ion-item>
+          </ion-col>
+        </ion-row>
 
       <ion-list lines="none">
         <ion-radio-group>
           <ion-item>
             <ion-label>
-              เลือกได้หลายอย่าง
+              1.หมวดที่ใช้ในใบกำกับภาษี
+            </ion-label>
+          </ion-item>
+          <ion-item>
+            <ion-radio slot="start" value="1"></ion-radio>
+            <ion-label>ห้องพัก</ion-label>
+          </ion-item>
+          <ion-item>
+            <ion-radio slot="start" value="2"></ion-radio>
+            <ion-label>ห้องประชุม</ion-label>
+          </ion-item>
+        </ion-radio-group>
+      </ion-list>
+
+
+      <ion-list lines="none">
+        <ion-radio-group>
+          <ion-item>
+            <ion-label>
+              2.เลือกได้อย่างใดอย่างหนึ่ง
             </ion-label>
           </ion-item>
           <ion-item>
@@ -207,7 +258,7 @@
         </ion-item>
         <ion-item>
           <ion-label>Checkbox1</ion-label>
-          <ion-checkbox slot="start" value=""></ion-checkbox>
+          <ion-checkbox slot="start" value="123"></ion-checkbox>
         </ion-item>
         <ion-item>
           <ion-label>Checkbox2</ion-label>
@@ -239,7 +290,7 @@
       </ion-card>
 
       <ion-card>
-        <ion-card-content >
+        <ion-card-content>
           <ion-item class="ion-text-center">
             <ion-col size="2">
               ไอดี
